FIX: remove min on gap padding

--- a/_helper.scss
+++ b/_helper.scss
@@ -25,8 +25,8 @@
     margin-left: ($x / -2);
     > .cell {
         margin-bottom: $y;
-        padding-right: ($x / -2);
-        padding-left: ($x / -2);
+        padding-right: ($x / 2);
+        padding-left: ($x / 2);
     }
 }
 
